# taskapp

./: FEEDBACK.md  README.md  docker-compose.yaml
api/: Dockerfile  db.py  main.py  migrate_db.py  pyproject.toml
api/modules/attendance/: api.py  model.py
api/modules/category/: api.py  model.py  schema.py  service.py
api/modules/login/: api.py  model.py
api/modules/priority/: api.py  model.py  schema.py  service.py
api/modules/staff/: api.py  model.py  schema.py  service.py
api/modules/status/: api.py  model.py  schema.py  service.py
api/modules/task_detail/: model.py  schema.py
api/modules/tasks/: api.py  model.py  schema.py  service.py
api/tests/: test_main.py
web/: Dockerfile
web/taskapp-web/: README.md  package-lock.json  package.json  vite.config.ts
web/taskapp-web/src/: App.vue  main.ts
web/taskapp-web/src/components/: AddTaskBtn.vue  DeleteModal.vue  EditModal.vue  StaffEditModal.vue  TaskCard.vue  TaskCardForTaskList.vue  TaskGroup.vue
web/taskapp-web/src/layout/: Header.vue
web/taskapp-web/src/pages/: AddStaff.vue  AddTask.vue  AttendanceSystem.vue  Calendar.vue  KanbanBoard.vue  LoginScreen.vue  StaffList.vue  TaskList.vue
web/taskapp-web/src/router/: index.ts
web/taskapp-web/src/utils/: endpoints.ts  interface.ts
